# chat_management

./: .gitignore  README.md  pyproject.toml
config/db_schema/: branches.json  llm_messages.json  message.json  system_messages.json  user_messages.json
data/: app.db
others/legacy/: about  branch1.py  llm_client0.py  llm_client1.py  llm_client2.py  response.py
others/temporary/: response_api.py  streaming_prot.py  streaming_test.py
src/: response.py
src/chat_management/: __init__.py
src/database/: DB_utils.py  DB_utils2.py  database_test.py
src/models/: branch1.py  llm_client.py  llm_clinet3.py  models.ipynb
