[project]
name = "chat-management"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Takemoto-Tomohiro", email = "s2322039@stu.musashino-u.ac.jp" }
]
dependencies = [
    "fastapi>=0.111.0",
    "requests>=2.32.3",
    "httpx[http2]>=0.27.0",
    "pip>=24.1.1",
    "supabase>=2.5.1",
    "structlog>=24.2.0",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "jupyter>=1.0.0",
    "notebook>=7.2.1",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/chat_management"]
